--- a/VideoConverter/WinFormsControl/VideoConfig.resx
+++ b/VideoConverter/WinFormsControl/VideoConfig.resx
@@ -117,189 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="&gt;&gt;cmbBitRate.Name" xml:space="preserve">
-    <value>cmbBitRate</value>
-  </data>
-  <data name="&gt;&gt;cmbBitRate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbBitRate.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;cmbBitRate.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;lblBitRate.Name" xml:space="preserve">
-    <value>lblBitRate</value>
-  </data>
-  <data name="&gt;&gt;lblBitRate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblBitRate.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;lblBitRate.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;cmbFrameRate.Name" xml:space="preserve">
-    <value>cmbFrameRate</value>
-  </data>
-  <data name="&gt;&gt;cmbFrameRate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbFrameRate.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;cmbFrameRate.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="&gt;&gt;lblFrameRate.Name" xml:space="preserve">
-    <value>lblFrameRate</value>
-  </data>
-  <data name="&gt;&gt;lblFrameRate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblFrameRate.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;lblFrameRate.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;cmbAspect.Name" xml:space="preserve">
-    <value>cmbAspect</value>
-  </data>
-  <data name="&gt;&gt;cmbAspect.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbAspect.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;cmbAspect.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="&gt;&gt;lblAspect.Name" xml:space="preserve">
-    <value>lblAspect</value>
-  </data>
-  <data name="&gt;&gt;lblAspect.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblAspect.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;lblAspect.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="&gt;&gt;cmbSize.Name" xml:space="preserve">
-    <value>cmbSize</value>
-  </data>
-  <data name="&gt;&gt;cmbSize.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbSize.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;cmbSize.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="&gt;&gt;lblSize.Name" xml:space="preserve">
-    <value>lblSize</value>
-  </data>
-  <data name="&gt;&gt;lblSize.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblSize.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;lblSize.ZOrder" xml:space="preserve">
-    <value>7</value>
-  </data>
-  <data name="&gt;&gt;cmbCodec.Name" xml:space="preserve">
-    <value>cmbCodec</value>
-  </data>
-  <data name="&gt;&gt;cmbCodec.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbCodec.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;cmbCodec.ZOrder" xml:space="preserve">
-    <value>8</value>
-  </data>
-  <data name="&gt;&gt;lblCodec.Name" xml:space="preserve">
-    <value>lblCodec</value>
-  </data>
-  <data name="&gt;&gt;lblCodec.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblCodec.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;lblCodec.ZOrder" xml:space="preserve">
-    <value>9</value>
-  </data>
-  <data name="&gt;&gt;cmbFormat.Name" xml:space="preserve">
-    <value>cmbFormat</value>
-  </data>
-  <data name="&gt;&gt;cmbFormat.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbFormat.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;cmbFormat.ZOrder" xml:space="preserve">
-    <value>10</value>
-  </data>
-  <data name="&gt;&gt;lblFormat.Name" xml:space="preserve">
-    <value>lblFormat</value>
-  </data>
-  <data name="&gt;&gt;lblFormat.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblFormat.Parent" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;lblFormat.ZOrder" xml:space="preserve">
-    <value>11</value>
-  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="fraVideConfig.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="fraVideConfig.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="fraVideConfig.Size" type="System.Drawing.Size, System.Drawing">
-    <value>545, 119</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="fraVideConfig.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="fraVideConfig.Text" xml:space="preserve">
-    <value>Video Config</value>
-  </data>
-  <data name="&gt;&gt;fraVideConfig.Name" xml:space="preserve">
-    <value>fraVideConfig</value>
-  </data>
-  <data name="&gt;&gt;fraVideConfig.Type" xml:space="preserve">
-    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;fraVideConfig.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;fraVideConfig.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
   <data name="cmbBitRate.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="cmbBitRate.Location" type="System.Drawing.Point, System.Drawing">
     <value>367, 81</value>
   </data>
   <data name="cmbBitRate.Size" type="System.Drawing.Size, System.Drawing">
     <value>160, 20</value>
   </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="cmbBitRate.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
   </data>
@@ -316,7 +145,7 @@
     <value>0</value>
   </data>
   <data name="lblBitRate.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Right</value>
   </data>
   <data name="lblBitRate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -373,7 +202,7 @@
     <value>2</value>
   </data>
   <data name="lblFrameRate.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Right</value>
   </data>
   <data name="lblFrameRate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -429,9 +258,6 @@
   <data name="&gt;&gt;cmbAspect.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <data name="lblAspect.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
-  </data>
   <data name="lblAspect.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -485,9 +311,6 @@
   </data>
   <data name="&gt;&gt;cmbSize.ZOrder" xml:space="preserve">
     <value>6</value>
-  </data>
-  <data name="lblSize.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
   </data>
   <data name="lblSize.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -544,7 +367,7 @@
     <value>8</value>
   </data>
   <data name="lblCodec.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Right</value>
   </data>
   <data name="lblCodec.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -600,9 +423,6 @@
   <data name="&gt;&gt;cmbFormat.ZOrder" xml:space="preserve">
     <value>10</value>
   </data>
-  <data name="lblFormat.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
-  </data>
   <data name="lblFormat.Location" type="System.Drawing.Point, System.Drawing">
     <value>20, 27</value>
   </data>
@@ -629,6 +449,33 @@
   </data>
   <data name="&gt;&gt;lblFormat.ZOrder" xml:space="preserve">
     <value>11</value>
+  </data>
+  <data name="fraVideConfig.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
+  <data name="fraVideConfig.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="fraVideConfig.Size" type="System.Drawing.Size, System.Drawing">
+    <value>545, 119</value>
+  </data>
+  <data name="fraVideConfig.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="fraVideConfig.Text" xml:space="preserve">
+    <value>Video Config</value>
+  </data>
+  <data name="&gt;&gt;fraVideConfig.Name" xml:space="preserve">
+    <value>fraVideConfig</value>
+  </data>
+  <data name="&gt;&gt;fraVideConfig.Type" xml:space="preserve">
+    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;fraVideConfig.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;fraVideConfig.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
