--- a/VideoConverter/WinFormsControl/VideoConfig.resx
+++ b/VideoConverter/WinFormsControl/VideoConfig.resx
@@ -534,6 +534,9 @@
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>ＭＳ ゴシック, 9pt</value>
   </data>
+  <data name="$this.MaximumSize" type="System.Drawing.Size, System.Drawing">
+    <value>0, 104</value>
+  </data>
   <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
     <value>532, 104</value>
   </data>
